Combination manual and AI Edit: Fix a bunch of sonarqube issues